--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The client-side for the recipes sample application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./node_modules/node-static/bin/cli.js -p 9000 ."
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
   "homepage": "https://github.com/adamsea/recipes-client#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1"
+    "grunt-browserify": "^4.0.1",
+    "node-static": "^0.7.7"
   },
   "dependencies": {
     "es6-promise": "^3.0.2",
