--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "browserify app/main.js -o assets/js/app.js",
     "dev": "watchify app/main.js -d -o assets/js/app.js -v",
+    "start": "static -p 9000 .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/adamsea/recipes-client#readme",
   "dependencies": {
-    "lodash": "^3.10.1"
+    "es6-promise": "^3.0.2",
+    "lodash": "^3.10.1",
+    "whatwg-fetch": "^0.10.1"
   }
 }
