--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The client-side for the recipes sample application.",
   "main": "assets/js/app.js",
   "scripts": {
-    "build": "browserify app/main.js -o assets/js/app.js",
-    "dev": "watchify app/main.js -d -o assets/js/app.js -v",
+    "build": "browserify -t stringify app/main.js -o assets/js/app.js",
+    "dev": "watchify -t stringify app/main.js -d -o assets/js/app.js -v",
     "start": "static -p 9000 .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,7 @@
     "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
-    "node-static": "^0.7.7"
+    "node-static": "^0.7.7",
+    "stringify": "^3.1.0"
   }
 }
