--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "es6-promise": "^3.0.2",
     "lodash": "^3.10.1",
     "whatwg-fetch": "^0.10.1"
+  },
+  "devDependencies": {
+    "watchify": "^3.6.1"
   }
 }
