--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "lodash": "^4.6.1",
     "lodash-migrate": "^0.2.11",
     "whatwg-fetch": "^0.10.1"
+  },
+  "devDependencies": {
+    "node-static": "^0.7.7"
   }
 }
