--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
   },
   "homepage": "https://github.com/adamsea/recipes-client#readme",
   "dependencies": {
-    "es6-promise": "^3.0.2",
-    "lodash": "^4.6.1",
-    "lodash-migrate": "^0.2.11",
-    "picomodal": "^2.3.0",
-    "whatwg-fetch": "^0.10.1"
+    "es6-promise": "^4.2.8",
+    "lodash": "^4.17.21",
+    "lodash-migrate": "^0.3.16",
+    "picomodal": "^3.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
-    "browserify": "^13.0.0",
-    "htmlprocessor": "^0.2.0",
-    "node-static": "^0.7.7",
-    "stringify": "^3.1.0",
-    "uglify-js": "^2.6.1"
+    "browserify": "^17.0.0",
+    "htmlprocessor": "^0.3.1",
+    "node-static": "^0.7.11",
+    "stringify": "^5.2.0",
+    "uglify-js": "^2.6.1",
+    "watchify": "^4.0.0"
   }
 }
